--- a/boot/bin/BUILD.bazel
+++ b/boot/bin/BUILD.bazel
@@ -1,3 +1,5 @@
+package(default_visibility = ["//visibility:public"])
+
 load("//bzl:rules.bzl",
      "bootstrap_archive",
      "bootstrap_executable",
@@ -39,10 +41,24 @@ ocamlc_boot( ##FIXME: do we really need a separate rule?
     deps = [
         "//compilerlibs:ocamlcommon",
         "//bytecomp:ocamlbytecomp",
-        # "//boot:stdlib"
+        # "//boot/lib:stdlib"
     ],
     visibility = [
         "//compilers/stage2:__pkg__",
+        "//testsuite:__pkg__"
+    ]
+)
+
+bootstrap_executable(
+    name = "ocamlopt",
+    opts = [],
+    deps = [
+        "//compilerlibs:ocamlcommon",
+        "//compilerlibs:ocamloptcomp",
+        # "//stdlib",
+        "//driver:Optmain"
+    ],
+    visibility = [
         "//testsuite:__pkg__"
     ]
 )
