--- a/boot/lib/BUILD.bazel
+++ b/boot/lib/BUILD.bazel
@@ -1,3 +1,5 @@
+package(default_visibility = ["//visibility:public"])
+
 alias(
     name   = "camlrun",
     actual = "//runtime:camlrun"
@@ -6,4 +8,9 @@ alias(
 alias(
     name   = "asmrun",
     actual = "//runtime:asmrun"
+)
+
+alias(
+    name = "stdlib",
+    actual = "//stdlib"
 )
