--- a/bzl/toolchain/BUILD.bazel
+++ b/bzl/toolchain/BUILD.bazel
@@ -20,13 +20,13 @@ package(default_visibility = ["//visibility:public"])
 ## may be changed by transition
 label_flag(
     name = "ocamlc",
-    build_setting_default = "//boot/bin:ocamlc"
+    build_setting_default = "//boot:ocamlc"
     # build_setting_default = "//runtime:ocamlc"
 )
 
 label_flag(
     name = "ocamlrun",
-    build_setting_default = "//boot:ocamlrun"
+    build_setting_default = "//boot/bin:ocamlrun"
 )
 
 label_flag(
