--- a/otherlibs/str/BUILD.bazel
+++ b/otherlibs/str/BUILD.bazel
@@ -9,7 +9,7 @@ load("//config:CONFIG.bzl", "ROOT_MODULE_OPTS", "ROOT_SIG_OPTS")
 MODULE_OPTS = ROOT_MODULE_OPTS
 SIG_OPTS = ROOT_SIG_OPTS
 
-STDLIB = ["//boot:stdlib"]
+STDLIB = ["//boot/lib:stdlib"]
 
 # LIBNAME=str
 # COBJS=strstubs.$(O)
