--- a/middle_end/BUILD.bazel
+++ b/middle_end/BUILD.bazel
@@ -5,12 +5,17 @@ load("//bzl:rules.bzl",
      "bootstrap_signature",
 )
 
-load("//config:CONFIG.bzl", "ROOT_MODULE_OPTS", "ROOT_SIG_OPTS")
+load("//config:CONFIG.bzl",
+     "OC_COMMON_CFLAGS",
+     "PLATFORM_CFLAGS")
 
-MODULE_OPTS = ROOT_MODULE_OPTS
-SIG_OPTS = ROOT_SIG_OPTS
+MODULE_OPTS = OC_COMMON_CFLAGS + PLATFORM_CFLAGS
+# + [
+#     "-nostdlib"
+# ]
+SIG_OPTS    = OC_COMMON_CFLAGS + PLATFORM_CFLAGS
 
-STDLIB = ["//boot:stdlib"]
+STDLIB = ["//boot/lib:stdlib"]
 
 bootstrap_library(
     name = "middle_end",
